# MonkeyGL

./: .gitignore  CMakeLists.txt  LICENSE  MonkeyGL.vcxproj  MonkeyGL.vcxproj.filters  README.md  ReleseNotes.md  build.sh  build_on_arm.md  build_on_arm.txt  makefile  vs2022.sln
core/: AnnotationInfo.cpp  AnnotationInfo.h  AnnotationLayer.cpp  AnnotationLayer.h  AnnotationUtils.cpp  AnnotationUtils.h  Base64.hpp  BaseDataProvider.cpp  BaseDataProvider.h  BaseLayer.cpp  BaseLayer.h  BatchInfo.cpp  BatchInfo.h  CPRImageLayer.cpp  CPRImageLayer.h  CPRInfo.cpp  CPRInfo.h  CPRLineLayer.cpp  CPRLineLayer.h  CPRProvider.cpp  CPRProvider.h  CuDataInfo.cpp  CuDataInfo.cu  CuDataInfo.h  CuDataManager.cpp  CuDataManager.cu  CuDataManager.h  DataManager.cpp  DataManager.h  Defines.cpp  Defines.h  DeviceInfo.cpp  DeviceInfo.h  Direction.cpp  Direction.h  HelloMonkey.cpp  HelloMonkey.h  Hi.cpp  Hi.h  IRender.cpp  (+43 more)
data/: download.md
examples/: examples.py  server.py  test.py
examples/example_exe_invokeso/: CMakeLists.txt  example.cpp
examples/example_pybind11/: CMakeLists.txt  example.cpp  test.py
examples/example_pybind11_invokeso/: CMakeLists.txt  example.cpp  test.py
examples/html/: index.html  utils.js
examples/html/js/: cornerstone.js  mprline.js  pako.js  utils.js
examples/html/js/libs/: cornerstone@0.12.2.js  cornerstoneTools@0.7.9.js  lodash@4.17.10.js  png.js  zlib.js
examples/html/js/mock/: base64.js
install_scripts/: cuda_install_ubuntu.sh
pybind11_interface/: CMakeLists.txt  PybindInterface.cpp  examples.py  server.py  test.py
resources/: human.stl
trfns/: coro.txt
